--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "firebase": "^9.15.0",
+    "firebase-tools": "^11.20.0",
     "framer-motion": "^8.5.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
