--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,11 @@
 {
   "hosting": {
-    "public": "public",
-    "site": "jasmeet-portfolio",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
